5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1831_1644.log
== TEST (2019-06-13 16:04:11) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

print(p)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:25) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

i = -1		
for i in range(size(n)):
	if(n[i] < 5):
		i = i + 1
	
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:46) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

i = -1		
for i in range(size(n)):
	if(n[i] < 5):
		i = i + 1
	else: 
		i = i + 0
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:07) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = a[i]
	
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:18) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n + a[i]
	
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:08:33) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		a[i] = n[i]
	
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:07) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		


for i in range(size(n)):
	if(n[i] < 5):
		a[i] = n[i]
	else:
		a[i] = a[i]
 
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:08) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
j = -1

for i in range(size(n)):
	if(n[i] < 5):
		a[i] = j + 1
	
 
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:25) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
j = -1

for i in range(size(n)):
	if(n[i] < 5):
		a = j + 1
	
 
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:49) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
j = -1

for i in range(size(n)):
	if(n[i] < 5):
		a[i] = a[i] + 1
	
 
	
print(p)		
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:41) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		


for i in range(size(n)):
	if(n[i] < 5):
		a[i] = a[i] + 1
	
 
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:37) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		



	
 
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:13) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

a[i] = 1

	
 
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:37) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
b = -1
for i in range(size(n)):
	if(n[i] < 5):
		b = b + 1
		

	
 
	
print(p)		
print(b
-- ERROR:
File "XXXX", line 22
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:42) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
b = -1
for i in range(size(n)):
	if(n[i] < 5):
		b = b + 1
		

	
 
	
print(p)		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:59) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
b = 0
for i in range(size(n)):
	if(n[i] < 5):
		b = b + 1
		

	
 
	
print(p)		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:11) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
b = 0
for i in range(size(n)):
	if(n[i] < 5):
		b = b + 1
		

	
 
	
print(p)		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:53) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		a[i] = a[i]
		

	
 
	
print(p)		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:58) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		a[i] = a[i]
		

	
 
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:21) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:31) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:32) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:32) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:32) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:32) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:36) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:45) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:47) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

for i in range(size(n)):
	if(n[i] < 5):
		n[i] = n[i]
		

	
 
	
print(p)		
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:28) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		
b = 0
for i in range(size(n)):
	if(n[i] < 5):
		a[i] = b
		b = b + 1 
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:31:05) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = 0
while(i < size(n)):
	n[i] = a[i]
	i = i + 1
		 
		
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:32:17) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

		 
		
		
	
print(p)		
print(a)
-- EXECUTION TIME:
0.993557
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[0 0 0 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:28) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
for i in range(size(n)):
	if(v[i] < 5):
		a[p] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:36) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
for i in range(size(n)):
	if(n[i] < 5):
		a[p] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:46) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
for i in range(size(n)):
	if(n[i] < 5):
		a[0] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:56) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
for i in range(size(n)):
	if(n[i] < 5):
		a[0] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:38:28) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
for i in range(size(n)):
	if(n[i] < 5):
		a[0] = i
		i = i + 1
		
	
print(p)		
print(a)
-- EXECUTION TIME:
0.840175
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[10  0  0  0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[8 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[4 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:55) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
j = 0

for i in range(size(n)):
	if(n[i] < 5):
		a[j] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:39:07) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
j = 0

for i in range(size(n)):
	if(n[i] < 5):
		a[j] = i
		i = i + 1
		
	
print(p)		
print(a)
-- EXECUTION TIME:
1.05769
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[10  0  0  0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[8 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[4 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:34) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
j = 0

for i in range(size(n)):
	if(n[i] < 5):
		a[j] = i
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:45) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
j = 0

for i in range(size(n)):
	if(n[i] < 5):
		a[j] = i
		j = j + 1
		i = i + 1
		
	
print(p)		
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:40:05) 
-- CODE:
from numpy import*

n = array(eval(input("Digite os valores ")))
p = 0

for i in range(size(n)):
	if(n[i] < 5.0):
		p = p + 1

a = zeros(p, dtype = int)		

i = -1
j = 0

for i in range(size(n)):
	if(n[i] < 5):
		a[j] = i
		j = j + 1
		i = i + 1
		
	
print(p)		
print(a)
-- EXECUTION TIME:
1.00154
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
